--- a/scss/plugin/_widgets.scss
+++ b/scss/plugin/_widgets.scss
@@ -14,6 +14,7 @@
             display: inline-block;
             width: 30px;
             height: 30px;
+            background:#fff;
             svg {
                 width: 100%;
                 height: 100%;
@@ -30,6 +31,7 @@
     }
     
 } 
+
 
 
 .page-template-gcr-plugin-templates .site-content {
